# task4feedback

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  a2c.py  benchmark.py  benchmark_old.py  cannon_gemm_hier.py  environment.yml  eval_dqn.py  eval_iql.py  generate_datasets.py  generate_partition_dataset.py  graph.data.yaml  graph.tasks.yaml  graph_animation_example.py  graph_test.py  graph_test_value.py  interface.py  jaes_driver.py  logging.conf  make_clangd.py  makefile  manual_torchrl_ppo.py  old_network_torchrl_ppo.py  optimal_jacobi_test.py  playground.py  ppo.py  ppo_random.py  ppo_random_diff.py  ppo_random_diff_test.py  pyproject.toml  requirements.txt  run_graph.py  run_stencil.py  test_cannon_gemm_hier_topo.py  test_dynamic_workload.py  test_graphs.py  (+13 more)
examples/: run_simulator.py
experiments/: 4x4x16_static_1:1:1.pkl  8x8x128_diag_1:1:1.pkl  animate_workload.py  boundary_sweep.py  breakdown.py  cnn_train_ieft.py  cnn_train_is.py  const_vs_inf.py  do_rollout.py  generate_workload_dir.py  graph_sweep.py  load_replay_rewards.py  logging.conf  memory_sweep.py  optimal_jacobi_reward_dataset.py  pickle_eval.py  requirements.txt  run_model.py  run_one_model.py  run_parmetis.py  run_single_graph.py  size_sweep.py  sweep.yaml  sweep_partitions.py  sweep_wandb.py  test_chol.py  train.py  vec_train_ieft.py  vec_train_is.py
experiments/conf/: 4x4x16_static.yaml  4x4x16_static_cnn.yaml  4x4x16_static_mlp.yaml  8x8x128_dynamic_bump.yaml  8x8x128_dynamic_bump_cnn.yaml  8x8x128_dynamic_circle.yaml  8x8x128_dynamic_circle_cnn.yaml  8x8x128_dynamic_corners.yaml  8x8x128_dynamic_corners_cnn.yaml  8x8x128_dynamic_diag.yaml  8x8x128_dynamic_diag_cnn.yaml  boundary_sweep.yaml  cholesky_10.yaml  cholesky_10_gnn.yaml  cholesky_10_mlp.yaml  cholesky_4.yaml  cholesky_4_gnn.yaml  cholesky_4_mlp.yaml  cholesky_6.yaml  cholesky_6_gnn.yaml  cholesky_6_mlp.yaml  cholesky_8.yaml  cholesky_8_gnn.yaml  cholesky_8_mlp.yaml  circle_test_cnn_ieft.yaml  circle_test_cnn_is.yaml  circle_test_dieft.yaml  circle_test_ieft.yaml  circle_test_is.yaml  config.yaml  dynamic_batch.yaml  graph_sweep.yaml  problem_size_sweep.yaml  reward_sweep_figure.yaml  size_sweep.yaml  static_batch.yaml  static_single.yaml  test.yaml
experiments/conf/algorithm/: ppo.yaml  ppo_rnn.yaml
experiments/conf/eval/: default.yaml
experiments/conf/feature/: candidate_coordinate.yaml  cnn_batch.yaml  cnn_single.yaml  gnn_default.yaml  gnn_single.yaml
experiments/conf/graph/: cholesky.yaml  dynamic_jacobi.yaml  dynamic_jacobi_bump.yaml  dynamic_jacobi_circle.yaml  dynamic_jacobi_corners.yaml  dynamic_jacobi_debug.yaml  dynamic_jacobi_diag.yaml  dynamic_jacobi_drift.yaml  dynamic_jacobi_load.yaml  static_jacobi.yaml
experiments/conf/logging/: default.yaml
experiments/conf/lr_scheduler/: linear_decay.yaml
experiments/conf/network/: cnn_batch.yaml  cnn_batch_lstm.yaml  cnn_single.yaml  cond_dilation_cnn_batch.yaml  dilation_cnn_batch.yaml  gnn_baseline.yaml  original_gnn_baseline.yaml  rec_unet_cnn_batch.yaml  vector_baseline.yaml  (+1 more)
experiments/helper/: algorithm.py  env.py  eval.py  graph.py  model.py  parmetis.py  run_name.py
experiments/pickled_evaluation/: 8x8x128_bump_1:1:1.pkl  8x8x128_circle_1:1:1.pkl  8x8x128_corners_1:1:1.pkl
experiments/sweep_conf/: README.md  cnn_ieft.yaml  cnn_is.yaml  delay.yaml  submit.sh  sweep_manager.py  vec_ieft.yaml  vec_is.yaml
runner/: eval.yaml  experiment.yaml  expgen.py  run_parallel_launcher.sh  run_tmux_launcher.sh  train.py
scripts/a2c_rl_no_priority/: ppo_stencil.py
scripts/ppo_rl/: ppo_cholesky.py  ppo_random.py
scripts/ppo_rl_no_priority/: eval_on_cholesky.py  eval_on_random.py  eval_on_stencil.py  ppo_cholesky.py  ppo_mix.py  ppo_random.py  ppo_stencil.py  ppo_sweep.py
scripts/ppo_rl_stencil/: .gitignore  ppo_cholesky.py
scripts/rl_plotting/: README.md  breakdown.R  breakdown.sh  cholesky_theory.py  convert_to_pdf.sh  homog_theory.py  log_parsing.sh  logging.conf  loss.R  pdfs_to_ppts.py  plotting.sh  simtime.R  start_exp.sh  summarized_simtime.R  test_cholesky.py  test_sweeps.py  time_breakdown.R
src/backend/: CMakeLists.txt  communication_manager.hpp  device_manager.cpp  graph.cpp  queues.cpp  scheduler.cpp  task_manager.cpp  tasks.cpp
src/backend/include/: action.hpp  breakpoints.hpp  communication.hpp  communication_manager.hpp  data.hpp  data_manager.hpp  device_manager.hpp  devices.hpp  event_manager.hpp  events.hpp  eviction.hpp  features.hpp  graph.hpp  iterator.hpp  macros.hpp  noise.hpp  observer.hpp  parmetis_wrapper.hpp  queues.hpp  resources.hpp  scheduler.hpp  settings.hpp  simulator.hpp  stats.hpp  task_manager.hpp  tasks.hpp
src/bindings/: CMakeLists.txt  bindings.cpp  data_bindings.cpp  device_bindings.cpp  event_bindings.cpp  feature_bindings.cpp  graph_bindings.cpp  mapper_bindings.cpp  observer_bindings.cpp  parmetis_wrapper_bindings.cpp  scheduler_bindings.cpp  simulator_bindings.cpp  task_bindings.cpp  task_noise_bindings.cpp  topology_bindings.cpp
src/bindings/include/: features.hpp  nbh.hpp
src/task4feedback/: __init__.py  execute.py  graphs.py  legacy_types.py  load.py  threads.py  tracer.py  types.py
src/task4feedback.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/task4feedback/fastsim/: CMakeLists.txt  communication.pxd  data.pxd  devices.pxd  graph.pxd  interface.py  minimal_types.py  models.py  network_mapper.py  noise.pxd  settings.pxd  simulator.pxd  simulator.pyx  task_state.pxd  tasks.pxd
task4feedback/: execute.py  graphs.py
test/: run_tests.sh  test_data_movement.py  test_depth.py  test_lru_eviction.py  test_sim.py
test/backend/: CMakeLists.txt  hello_world.cpp  test_comm_noise.cpp  test_cpp.cpp  test_eft.cpp  test_noise.cpp  test_queue.cpp  test_scheduler.cpp  test_task_noise.cpp  test_tasks.cpp
test/graphs/: .test_sweeps.py.swp  1d_8gpus.result  test_cannon_gemm.py  test_cannon_gemm_hier_topo.py  test_cholesky.py  test_imec.py  test_imec_hier.py  test_independent.py  test_random.py  test_reduction.py  test_serial.py  test_stencil.py  test_sweeps.py  test_util.py
(+215 files in other folders)
