[project]
name = "task4feedback"
version = "0.0.1"
maintainers = [
    { name = "William Ruys", email = "will.ruys@gmail.com" },
    { name = "Hochan Lee", email = "hochan@utexas.edu" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["psutil", "pyyaml", "numpy"]


[project.optional-dependencies]
graph = ["pydot", "networkx", "hypernetx", "matplotlib", "seaborn"]
dev = ["ruff"]
rl = ["torch", "torchvision", "torchaudio"]

[tool.cython-lint]
ignore = [
    'E504', # break after binary operator
    'E501', # line too long
    "F841", # local variable is assigned to but never used
    "F405", # may be undefined, or defined from star imports: ...
    "W291", # trailing whitespace
    "E116", # unexpected indentation (comment)
    "W293", # blank line contains whitespace
]
