[build-system]
requires = ["scikit-build-core>=0.5", "pyyaml", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "task4feedback"
version = "0.0.1"
maintainers = [
    { name = "William Ruys", email = "will.ruys@gmail.com" },
    { name = "Hochan Lee", email = "hochan@utexas.edu" },
    { name = "Jaeyoung Park", email = "jaeyoung@utexas.edu" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["psutil", "pyyaml", "numpy", "python-json-logger"]


[project.optional-dependencies]
graph = ["pydot", "networkx", "hypernetx", "matplotlib", "seaborn"]
dev = ["ruff"]
rl = ["torch"]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build"
wheel.packages = ["src/task4feedback"]
wheel.license-files = []
cmake.minimum-version = "3.22.1"
cmake.build-type = "Debug"
cmake.verbose = true
ninja.minimum-version = "1.11"


[tool.scikit-build.cmake.define]
SIM_TRACK_RESOURCES = { env = "SIM_TRACK_RESOURCES", default = "ON" }
SIM_TRACK_LOCATION = { env = "SIM_TRACK_LOCATION", default = "ON" }
SPDLOG_ACTIVE_LEVEL = { env = "SPDLOG_ACTIVE_LEVEL", default = "SPDLOG_LEVEL_DEBUG" }

[tool.cython-lint]
ignore = [
    'E504', # break after binary operator
    'E501', # line too long
    "F841", # local variable is assigned to but never used
    "F405", # may be undefined, or defined from star imports: ...
    "W291", # trailing whitespace
    "E116", # unexpected indentation (comment)
    "W293", # blank line contains whitespace
]
