[project]
name = "task4feedback"
version = "0.2.0"
authors = [
    { name = "William Ruys", email = "will.ruys@gmail.com" },
    { name = "Jaeyoung Park", email = "jaeyoung@utexas.edu" },
    { name = "Hochan Lee", email = "hochan@utexas.edu" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "cxxfilt>=0.3,<1.0",
    "hypernetx>=2.0,<3.0",
    "hydra-core>=1.3,<2.0",
    "matplotlib>=3.5,<4.0",
    "meshio>=5.0,<6.0",
    "networkx>=3.3,<4.0",
    "numpy>=2.0,<3.0",
    "psutil>=5.0,<6.0",
    "pygmsh>=7.0,<8.0",
    "python-json-logger>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0.0",
    "tensordict>=0.8",
    "torch>=2.7",
    "torch-geometric>=2.5",
    "torchrl>=0.8",
    "tqdm>=4.66,<5.0",
    "wandb>=0.20",
    "pyqt6>=6.0,<7.0",
    "pymetis>=2025",
    "pydot>=4.0.0,<5.0",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.4.1,<9.0",
    "pytest-cov>=6.2.1,<7.0",
    "build>=1.2.2.post1,<2.0",
    "wheel>=0.45,<1.0",
    "pre-commit>=4.2.0,<5.0",
    "scikit-build-core>=0.10",
    "nanobind>=2.5",
    "numpy>=2.0,<3.0",
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.5", "numpy>=2.0,<3.0"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
minimum-version = "0.11"
wheel.packages = ["src/task4feedback"]
install.components = ["python"]
cmake.version = ">=3.29"
cmake.build-type = "Release"
build.verbose = true
build-dir = "build/{wheel_tag}"
wheel.expand-macos-universal-tags = true


[tool.scikit-build.cmake.define]
SIM_TRACK_RESOURCES = { env = "SIM_TRACK_RESOURCES", default = "OFF" }
SIM_TRACK_LOCATION = { env = "SIM_TRACK_LOCATION", default = "OFF" }
SPDLOG_ACTIVE_LEVEL = { env = "SPDLOG_ACTIVE_LEVEL", default = "SPDLOG_LEVEL_CRITICAL" }
ENABLE_NATIVE_TUNING = "ON"

[[tool.scikit-build.overrides]]
if.env.PGO_MODE = "Generate"
inherit.cmake.define = "append"
cmake.define.PGO_MODE = "Generate"

[[tool.scikit-build.overrides]]
if.env.PGO_MODE = "Use"
inherit.cmake.define = "append"
cmake.define.PGO_MODE = "Use"

[[tool.scikit-build.overrides]]
if.env.SIM_NATIVE = "ON"
inherit.cmake.define = "append"
cmake.define.ENABLE_NATIVE_TUNING = "ON"

[[tool.scikit-build.overrides]]
if.env.SIM_NATIVE = "OFF"
inherit.cmake.define = "append"
cmake.define.ENABLE_NATIVE_TUNING = "OFF"

[[tool.scikit-build.overrides]]
if.env.CMAKE_BUILD_TYPE = "Debug"
inherit.cmake.define = "append"
cmake.build-type = "Debug"
cmake.define.ENABLE_NATIVE_TUNING = "OFF"


[tool.ruff]
target-version = "py312"
extend-ignore = ["E501"]

[tool.cython-lint]
ignore = ["E504", "E501", "F841", "F405", "W291", "E116", "W293"]
name = "task4feedback"
line-length = 100
